--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         <footer id="hexValues">
             <!-- hex values for corresponding colors -->
         </footer>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
